[package]
name = "baget_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
uuid = { version = "1.5.0",  features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
env_logger = "0.10.0"
jsonwebtoken = "9.1.0"
argon2 = "0.5.2"
